# ChangeLog for app-misc/worker
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/worker/ChangeLog,v 1.25 2005/04/01 03:33:53 agriffis Exp $

  31 Mar 2005; Aron Griffis <agriffis@gentoo.org> worker-2.9.0.ebuild:
  stable on ia64

*worker-2.9.0 (04 Feb 2005)

  04 Feb 2005; Joel Hill <hillster@gentoo.org> -worker-2.8.4.ebuild,
  worker-2.8.5.ebuild, +worker-2.9.0.ebuild:
  Version Bump, Alot of new features.

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  13 Dec 2004; Jason Wever <weeve@gentoo.org> worker-2.8.4.ebuild:
  Stable on sparc.

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  worker-2.8.4.ebuild:
  Masked worker-2.8.4.ebuild stable for ppc

  24 Sep 2004; Sven Wegener <swegener@gentoo.org> worker-2.8.5.ebuild:
  Fixed CVS keyword replacement.

*worker-2.8.5 (18 Aug 2004)

  18 Aug 2004; Joel Hill <hillster@gentoo.org> +worker-2.8.5.ebuild:
  version bump

  16 Aug 2004; Joel Hill <hillster@gentoo.org> -worker-2.8.3.ebuild,
  worker-2.8.4.ebuild:
  marking Stable on x86

  04 May 2004; Bryan Østergaard <kloeri@gentoo.org> worker-2.8.4.ebuild:
  Stable on alpha.

  21 Mar 2004; Joel Hill <hillster@gentoo.org> worker-2.8.2.ebuild,
  worker-2.8.3.ebuild:
  mark stable

*worker-2.8.4 (17 Mar 2004)

  17 Mar 2004; Joel Hill <hillster@gentoo.org> worker-2.8.4.ebuild:
  version bump

  07 Jan 2004; Joel Hill <hillster@gentoo.org> worker-2.8.2.ebuild,
  worker-2.8.3.ebuild:
  fixed (C) years

  29 Dec 2003; Jason Wever <weeve@gentoo.org> :
  removed stray digest file.

*worker-2.8.3 (24 Dec 2003)

  24 Dec 2003; Joel Hill <hillster@gentoo.org> worker-2.8.1.ebuild,
  worker-2.8.2.ebuild, worker-2.8.3.ebuild:
  marking 2.8.2 stable and bumping to 2.8.3

*worker-2.8.2 (27 Nov 2003)

  27 Nov 2003; Joel Hill <hillster@gentoo.org> worker-2.8.2.ebuild:
  version bump

  04 Oct 2003; Joel Hill <hillster@gentoo.org> metadata.xml,