@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/worker
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/worker/ChangeLog,v 1.25 2005/04/01 03:33:53 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/worker/ChangeLog,v 1.26 2005/04/12 16:14:29 luckyduck Exp $
+
+  12 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> worker-2.9.0.ebuild:
+  stable on amd64, fixes #88775
 
   31 Mar 2005; Aron Griffis <agriffis@gentoo.org> worker-2.9.0.ebuild:
   stable on ia64
